# FlexFlow

./: .gitignore  CMakeLists.txt  build_ff.sh  debug.sh  run_debug.sh
config/: config.linux
examples/cpp/AlexNet/: legion_defines.h  realm_defines.h
examples/cpp/CLIP/: clip.cc  clip.h  clip_synthetic.cc  profile.sh
examples/cpp/CLIP/clip-models/: clip-img-txt.cc  clip-n-text-branches.cc
examples/cpp/DLRM/: dlrm.cc
examples/cpp/InceptionV3/: legion_defines.h  realm_defines.h
examples/cpp/SimpleNet/: Makefile
examples/cpp/UniT/: CMakeLists.txt  Makefile  profile.sh  profile_p100.sh  unit.cc  unit.cu  unit.h
examples/cpp/candle_uno/: candle_uno.cc  candle_uno.h
examples/cpp/synthetic_n_branches/: CMakeLists.txt  Makefile  profile.sh  synthetic_n_branches.cc  synthetic_n_branches.cu  synthetic_n_branches.h
examples/python/pytorch/: clip.py  export_clip.py  export_test_net.py  run_test_net.py
include/flexflow/: simulator.h
python/: profile.json  test_net.ff
python/flexflow/core/: flexflow_cffi_header.py
src/ops/: attention.cc
src/runtime/: graph.cc  operator.cc
